@@ -37,6 +37,7 @@ Changes for 1.4.j:
 
 Changes for 1.4.5:
 
+ - [ZBX-290] fixed possible server crash if host dns name is unknown (Sasha)
  - [ZBX-288] fixed compilation of the agent under Solaris 2.6 (Alexei)
  - [ZBX-287] fixed compilation under FreeBSD 4.1 with older GCC (Alexei)
  - [ZBX-277] fixed possible server crash when evaluating functions str(), regexp() and iregexp() (Alexei)
